# FEEN

./: .gitignore  BENEFITS.md  CITATION.cff  CMakeLists.txt  Dockerfile  README.md  api_log.txt  build_test  build_test.cpp  feen_ci_trigger.txt  render.yaml  vcpkg.json
.github/workflows/: ci.yml  main.yml
_codeql_build_dir/: Makefile
apps/: neural_network.h  oscillator_bank.h  signal_processing.h
benchmarks/: performance.cpp
configs/: default_plugins.yaml  filter_bank.yaml  memory_cell.json
docs/: APPLICATIONS.md  FEEN.md  FEEN_WAVE_ENGINE.md  HARDWARE_IN_THE_LOOP.md  HLV.md  REST_API.md  SPIRAL_TIME.md
domains/: parkinsons
domains/BioMesh/: BioMesh_Tests.cpp  CYBERNETIC_HEMATOPOIESIS.md  OsteoMesh.cpp  OsteoMesh.hpp
domains/energy/: EnergyMesh.hpp
domains/internet/: InternetDomain.hpp  test_internet_domain.cpp
domains/medicine/: CMakeLists.txt  NOTE.md  PAPER.md  pharma.cpp  pharma.hpp
domains/satellite/: SatelliteSwarm.hpp
examples/: 01_basic_oscillator.cpp  02_bistable_bit.cpp  03_frequency_multiplexing.cpp  04_logic_gates.cpp  05_neural_network.cpp
examples/cpg_control/: README.md  demo_cpg.py
examples/distributed_sync/: README.md  demo_sync.py
examples/reservoir_computing/: README.md  demo_reservoir.py
examples/structural_monitoring/: README.md  demo_structural.py
feen/: network.h
include/feen/: energy.h  gates.h  memory.h  network.h  resonator.h  transducer.h
include/feen/ailee/: ailee_types.h  confidence.h  consensus.h  fallback.h  metric.h  safety_gate.h
include/feen/energy/: coherence_observer.h  gain_operator.h
include/feen/hardware/: fpga_driver.h  hardware_adapter.h  mems_calibration.h
include/feen/sim/: integrators.h  scheduler.h  thermal.h
include/feen/spiral_time/: spiral_time_observer.h  spiral_time_state.h
include/feen/tools/: energy_tracker.h  phase_portrait.h  spectrum_analyzer.h
python/: CMakeLists.txt  ailee.py  feen_rest_api.py  plugin_registry.py  pyfeen.cpp  requirements.txt  vcp_integration.py
python/examples/: README.md  cpg_control.py  distributed_synchronization.py  plot_bifurcation.py  reservoir_computing.py  rest_api_demo.py  structural_health_monitoring.py
python/plugins/: __init__.py  domain_parkinsons.py  hardware_monitor.py  hlv_dynamics.py  observer_logger.py  ui_dashboard.py
python/tests/: test_ailee_rest_endpoints.py  test_hlv_dynamics.py  test_plugin_registry.py  test_vcp_connectivity_endpoint.py  test_vcp_wiring_invariants.py
research_interfaces/parkinsons/: PARKINSONS.md
tests/: CMakeLists.txt  test_ailee_metric.cpp  test_energy_mesh.cpp  test_hardware_adapter.cpp  test_medicine_domain.cpp  test_resonator.cpp  test_resonator_network.cpp  test_spiral_time.cpp  unit_tests.cpp
tests/tests/: numerical_accuracy.cpp
web/: app.py  hardware_bridge.py  requirements.txt
web/static/css/: node_graph.css  style.css
web/static/js/: main.js  node_graph.js
web/templates/: ailee_metric.html  coupling.html  dashboard.html  docs.html  hardware.html  hlv_lab.html  index.html  node_graph.html  vcp_connectivity.html  vcp_wiring.html
